tests/suite/fail/generated/parser/fail_bad_expr_4.ny
fn main() {
    let x = let //~ ERROR
}
